--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
