--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,11 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals"
-  ]
+  ],
+  "rules": {
+    "no-extra-semi": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/ban-ts-comment": "off"
+  }
 }
